# pre-commit-hooks

./: .gitignore  .mdl-style.rb  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg
hooks/: clazy.py  include_what_you_use.py  utils.py
