[metadata]
name = hurzelchen_pre-commit_hooks
version = 0.1.0
description = Hurzelchen' collection of pre-commit hooks.
author = Hurzelchen
author_email = github@hurzelchen.net
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    hurzelchen-include-what-you-use = hooks.include_what_you_use:main

[bdist_wheel]
universal = True
